<package format="2">
  <name>drone_ibvs</name>
  <version>1.0.0</version>
  <description>
  This package provides ibvs capability.
  </description>
  <maintainer email="m.hegazy@innopolis.university">Mostafa-Hegazy</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>fiducial_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

</package>
